--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -321,7 +321,7 @@ These can be used on a white background or as background colours to white text, 
     <td className="uqds-table__item" data-title="Name:">Warning</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$warning</code></td>
     <td className="uqds-table__item" data-title="HEX:">#fbb800</td>
-    <td className="uqds-table__item" data-title="Usage:">Warning; there <em>may</em> be a problem</td>
+    <td className="uqds-table__item" data-title="Usage:">Warning; there <em>may</em> be a problem. Should be used with the default text colour to avoid contrast issues.</td>
   </tr>
   <tr  className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-red-dark20"></div></td>
