--- a/packages/storybook-html/src/docs/introduction/overview.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/overview.story.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Introduction/Overview" />
+<Meta title="Introduction/Overview-old" />
 
 # Overview
 
