Doc wording tweaks

--- a/packages/storybook-html/src/components/alert/alert.docs.mdx
+++ b/packages/storybook-html/src/components/alert/alert.docs.mdx
@@ -13,7 +13,7 @@ The alert components are used to notify users of important information or change
 
 ## Page alerts 
 
-Page alerts are light versions of alerts that are used locally on pages along with components or on its own to notify users of important information or changes on a page.
+Page alerts are light variants of alerts that are used locally on pages along with components or on its own to notify users of important information or changes on a page.
 
 ### Info (Default example)
 
@@ -115,7 +115,7 @@ Page alerts are light versions of alerts that are used locally on pages along wi
 
 ## Global alerts
 
-Global alerts are darker variants of alerts that are used to convey a globally important information that appears at the top of the .
+Global alerts are darker variants of alerts that are used to convey a globally important information that appears in the top area of the webpage.
 
 ### Info global
 
