updated html code

--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -30,7 +30,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 </Canvas>
 
 ```html
-<div class="uq-hero uq-hero--feature-image">  
+<div class="uq-hero uq-hero--banner">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
       <img src="/images/hero/hero-example--small.jpg" />
