--- a/packages/storybook-html/src/components/alert/alert.docs.mdx
+++ b/packages/storybook-html/src/components/alert/alert.docs.mdx
@@ -22,7 +22,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 </Canvas>
 
 ```html
-<div class="uq-alert" role="alert">
+<div class="uq-alert uq-alert--info" role="alert">
   <div class="uq-alert__message">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
@@ -50,7 +50,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 </Canvas>
 
 ```html
-<div class="uq-alert uq-alert-warning" role="alert">
+<div class="uq-alert uq-alert--warning" role="alert">
   <div class="uq-alert__message">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
@@ -63,7 +63,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 </Canvas>
 
 ```html
-<div class="uq-alert uq-alert-error" role="alert">
+<div class="uq-alert uq-alert--error" role="alert">
   <div class="uq-alert__message">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
