kitchen sink updated, amends

--- a/packages/storybook-html/src/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/get-started.story.mdx
@@ -7,10 +7,11 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 <br/>
 <div className="uq-alert uq-alert--warning" role="alert">
   <div className="uq-alert__message">
-    <h2><span className="uq-icon uq-icon--architecture-and-planning--heavy-equipment-lift-hook-box uq-icon--text"></span> We're in restricted beta!</h2>
-    Currently restricted to ITS-ADS staff and/or those with access to our tools account on AWS. Please refer to the 🔒&nbsp;<a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw" target="_blank">environment setup instructions</a> if you <em>do</em> have access. Otherwise, the notes below should still give you an idea of what to expect.
+    <h2 className="uq-alert__title">We're in restricted beta!</h2>
+    <p>Currently restricted to ITS-ADS staff and/or those with access to our tools account on AWS. Please refer to the 🔒&nbsp;<a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw" target="_blank">environment setup instructions</a> if you <em>do</em> have access. Otherwise, the notes below should still give you an idea of what to expect.</p>
   </div>
-</div><br/>
+</div>
+<br/>
 
 There are a few ways to get started with the UQ Design System. Which method you
 choose depends on your project's requirements and whether you're a designer, an
