uqds alert colour variables added

--- a/packages/storybook-html/src/components/alert/alert.docs.mdx
+++ b/packages/storybook-html/src/components/alert/alert.docs.mdx
@@ -251,7 +251,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
       <th className="uqds-table__heading">Usage</th>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--blue"></div></td>
+      <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--info-dark"></div></td>
       <td className="uqds-table__item" data-title="Name:">Global info</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-alert--global</code> <code>$uq-alert--info</code> <code>$uq-alert--dark</code></td>
       <td className="uqds-table__item" data-title="Usage:">
@@ -261,7 +261,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
       </td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><div className="uqds-colour__palette uqds-green-dark10"></div></td>
+      <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--success-dark"></div></td>
       <td className="uqds-table__item" data-title="Name:">Global success</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-alert--global</code> <code>$uq-alert--success</code> <code>$uq-alert--dark</code></td>
       <td className="uqds-table__item" data-title="Usage:">
@@ -271,7 +271,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
       </td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--yellow"></div></td>
+      <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--warning-dark"></div></td>
       <td className="uqds-table__item" data-title="Name:">Global warning</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-alert--global</code> <code>$uq-alert--warning</code> <code>$uq-alert--dark</code></td>
       <td className="uqds-table__item" data-title="Usage:">
@@ -281,7 +281,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
       </td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><div className="uqds-colour__palette uqds-red-dark20"></div></td>
+      <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--alert-dark"></div></td>
       <td className="uqds-table__item" data-title="Name:">Global error</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-alert--global</code> <code>$uq-alert--error</code> <code>$uq-alert--dark</code></td>
       <td className="uqds-table__item" data-title="Usage:">
