add loading spinner component and fix alert on get started page

--- a/packages/storybook-html/src/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/get-started.story.mdx
@@ -6,7 +6,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <br/>
 <div className="uq-alert uq-alert--warning" role="alert">
-  <div className="uq-alert__message">
+  <div className="uqds-alert uq-alert__message">
     <h2 className="uq-alert__title">We're in restricted beta!</h2>
     <p>Currently restricted to ITS-ADS staff and/or those with access to our tools account on AWS. Please refer to the 🔒&nbsp;<a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw" target="_blank">environment setup instructions</a> if you <em>do</em> have access. Otherwise, the notes below should still give you an idea of what to expect.</p>
   </div>
